--- a/manifest.json
+++ b/manifest.json
@@ -19,5 +19,13 @@
     "default_popup": "./popups/sign_in.html",
     "default_title": "Open when opportunity to pay with bitcoin appear!"
   },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "content_scripts": [
+    {
+      "matches": [
+        "<all_urls>"
+      ],
+      "js": ["content.js"]
+    }
+  ]
 }
