--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
       "128": "./images/logo-BPAYMENTS_LETTER_BLACK.png"
   },
   "browser_action" : {
-    "default_popup": "./popups/sign_in.html",
+    "default_popup": "./popups/transfer_done.html",
     "default_title": "Open when opportunity to pay with bitcoin appear!"
   },
   "manifest_version": 2
