--- a/manifest.json
+++ b/manifest.json
@@ -16,8 +16,8 @@
       "128": "./images/logo-BPAYMENTS_LETTER_BLACK.png"
   },
   "browser_action" : {
-    "default_popup": "./popups/get_amount.html",
-    "default_title": "Open when opportunity to pay with bitcoin appear!"
+    "default_popup": "./popups/sign_in.html",
+    "default_title": "Open when opportunity to pay with bitcoin appears !"
   },
   "manifest_version": 2
 }
