--- a/manifest.json
+++ b/manifest.json
@@ -16,13 +16,13 @@
       "128": "./images/logo-BPAYMENTS_LETTER_BLACK.png"
   },
   "browser_action" : {
-    "default_popup": "./popups/sell_and_withdraw.html",
+    "default_popup": "./popups/sign_in.html",
     "default_title": "Open when opportunity to pay with bitcoin appears !"
   },
   "content_scripts": [
     {
     // "matches": ["*://*.boulanger.com/*deliverySelectionValidate"],
-    "matches": ["*://*.boulanger.com/checkout/payment"],
+    "matches": ["*://*.laredoute.fr/shoppingbasket*"],
     "js": ["./javascript/contentscript.js"]
     }
   ],
